# ai-flou2flow

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: api_reference.md  architecture.md  optimization.md
flou2flow/: agent.py  app.py  config.py  exporters.py  llm.py  mermaid.py  models.py  multimodal.py  nats_handler.py  pipeline.py  prompts.py  toon.py  utils.py
scratch/: generate_elsa.py  generate_test.py  test_french_day.py  test_input.py  test_multimodal.py  test_pdf.py
src/flou2flow/: __init__.py  agent.py  app.py  config.py  exporters.py  llm.py  models.py  pipeline.py  prompts.py
templates/: index.html
tests/: conftest.py  test_agent.py  test_api.py  test_models.py  test_toon.py
