[project]
name = "flou2flow"
version = "0.1.0"
description = "Transform fuzzy business needs into executable workflows automatically using Mistral 7B"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
]

[project.scripts]
flou2flow = "flou2flow.app:main"
